Exercises app change, test pluralization and pagination, update partials, add wrap method and js countdown

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -180,6 +180,7 @@ input {
   }
  }
 }
+
 /* microposts */
 
 .microposts {
@@ -206,4 +207,12 @@ aside {
   height: 100px;
   margin-bottom: 5px;
   }
+}
+
+/* micropost jQuery countdown */
+
+.countdown {
+  display: inline;
+  padding-left: 30px;
+  color: $grayLight;
 }
